# taking-you-on-a-journey

./: .gitignore  AGENTS.md  CLAUDE.md  bug.md  skills-lock.json  旅游攻略Agent编排-改进版.excalidraw  项目策划书.md
backend/: .env.example  .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: assembler.py  budgeting.py  build.py  diffing.py  lodging.py  matrix.py  planning.py  prefilter.py  prompt.py  reducers.py  state.py  time_context.py  tool_result_storage.py  tools.py
backend/app/api/: chat.py  chat_stream.py  map_proxy.py  plan.py  sessions.py
backend/app/core/: config.py  constants.py
backend/app/graph/: builder.py  state.py  stream.py
backend/app/itinerary/: assembler.py  geometry.py  (+6 more)
backend/tests/: conftest.py  test_accommodation.py  test_amap.py  test_amap_enrich.py  test_answer_dropped.py  test_apply_node.py  test_apply_operations.py  test_apply_recompute.py  test_apply_replace_plan.py  test_budget.py  test_builder.py  test_chat_stream.py  test_chat_stream_m2.py  test_chat_stream_m4.py  test_clarify_interrupt.py  test_clarify_node.py  test_cluster_by_day.py  test_cluster_kmeans.py  test_collect_context_node.py  test_config_m6fix.py  test_context.py  test_contracts.py  test_dispatch.py  test_dispatch_agent.py  test_dispatch_topology.py  test_enrich_duration.py  test_itinerary.py  test_itinerary_m6fix.py  test_linear_topology.py  test_llm_factory.py  test_m5fix_e2e.py  test_multiturn_qa.py  test_multiturn_refine.py  test_multiturn_replan.py  test_need_routing.py  test_parallel_retrieval.py  test_preflight.py  test_rebalance_budget.py  test_refine_budget.py  test_refine_helpers.py  (+17 more)
(+239 files in other folders)
