[project]
name = "backend"
version = "0.1.0"
description = "Trip Planner backend (M1 skeleton): FastAPI + LangGraph + SSE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.137.1",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langsmith>=0.2.0",
    "langchain-anthropic==1.4.6",
    "langchain-openai==1.3.2",
    "langgraph==1.2.5",
    "pydantic-settings==2.14.1",
    "sse-starlette>=2.1.3,<3.4.0",
    "uvicorn[standard]==0.49.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "aiosqlite>=0.22.1",
    "ortools>=9.0",
    "xiaohongshu-cli>=0.6.4",
]

[project.scripts]
dev = "app.main:start_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
